# fastapi-audit-log

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
auditlog_fastapi/: __init__.py  config.py  context.py  dependencies.py  filters.py  middleware.py  models.py  routes.py
auditlog_fastapi/db/: beanie_document.py  sqlalchemy_table.py  sqlmodel_model.py  tortoise_model.py
auditlog_fastapi/storage/: __init__.py  asyncpg_storage.py  base.py  beanie_storage.py  sqlalchemy_storage.py  sqlmodel_storage.py  tortoise_storage.py
examples/: asyncpg_usage.py  basic_usage.py  beanie_mongodb_usage.py  sqlalchemy_usage.py  sqlmodel_usage.py  tortoise_usage.py
fastapi_audit_log/: __init__.py  config.py  exceptions.py  registry.py  routes.py
fastapi_audit_log/db/: beanie_document.py  sqlalchemy_table.py  sqlmodel_model.py  tortoise_model.py
fastapi_audit_log/storage/: asyncpg_storage.py  beanie_storage.py  sqlalchemy_storage.py  sqlmodel_storage.py  tortoise_storage.py
tests/: conftest.py  test_config.py  test_filters.py  test_middleware.py  test_redaction.py  test_sqlalchemy_storage.py
